# xiaozhi-esp32s3

./: CMakeLists.txt
components/audio_utils/: CMakeLists.txt  audio_utils.cpp  audio_utils.h  component.cmake
main/: CMakeLists.txt  main.cpp
main/WiFi/: wifi_manager.cpp  wifi_manager.h
main/audio/: audio_capture.cpp  audio_capture.h  audio_manager.cpp  audio_manager.h
